proje_dosyalari/kubernetes-manifests/service-mesh/namespace-injection.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alt-las
  labels:
    istio-injection: enabled
