proje_dosyalari/kubernetes-manifests/service-mesh/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: alt-las
spec:
  mtls:
    mode: STRICT
